{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 37,
  "lineage": "a00772c7-ef90-2d1c-c6f3-88f9ce1c900c",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "azure-vpn-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/publicIPAddresses/VPC-vpn-vpn-gw-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "VPC-vpn-vpn-gw-pub-ip",
            "resource_group_name": "RG-il-vpn",
            "sku": "Basic",
            "tags": {
              "environment": "test",
              "service": "vpn"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azure-vpn-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/publicIPAddresses/VPC-vpn-vpn-gw-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "VPC-vpn-vpn-gw-pub-ip",
            "resource_group_name": "RG-il-vpn",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test",
              "service": "vpn"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "azure-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.0/24",
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/routeTables/VPC-vpn-azure-rt/routes/VPC-vpn-azure-route",
            "name": "VPC-vpn-azure-route",
            "next_hop_in_ip_address": "",
            "next_hop_type": "VirtualNetworkGateway",
            "resource_group_name": "RG-il-vpn",
            "route_table_name": "VPC-vpn-azure-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_route_table.azure-rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "azure-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/routeTables/VPC-vpn-azure-rt",
            "location": "westeurope",
            "name": "VPC-vpn-azure-rt",
            "resource_group_name": "RG-il-vpn",
            "route": [
              {
                "address_prefix": "192.168.0.0/24",
                "name": "VPC-vpn-azure-route",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VirtualNetworkGateway"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.255.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/virtualNetworks/VPC-vpn/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-il-vpn",
            "virtual_network_name": "VPC-vpn"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure-vpn-protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.151.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/virtualNetworks/VPC-vpn/subnets/VPC-vpn-protected-subnet",
            "name": "VPC-vpn-protected-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-il-vpn",
            "virtual_network_name": "VPC-vpn"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "azure-vpn-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "20.73.84.72"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation2",
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/virtualNetworkGateways/VPC-vpn-vpn-gw",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/publicIPAddresses/VPC-vpn-vpn-gw-pub-ip",
                "subnet_id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/virtualNetworks/VPC-vpn/subnets/GatewaySubnet"
              }
            ],
            "location": "westeurope",
            "name": "VPC-vpn-vpn-gw",
            "private_ip_address_enabled": false,
            "resource_group_name": "RG-il-vpn",
            "sku": "VpnGw2",
            "tags": {
              "environment": "test",
              "service": "vpn"
            },
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.azure-vpn-ip",
            "azurerm_subnet.azure-gateway-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "az-hub-onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/connections/VPC-vpn-cloudil-hub",
            "ipsec_policy": [
              {
                "dh_group": "DHGroup2048",
                "ike_encryption": "AES128",
                "ike_integrity": "SHA256",
                "ipsec_encryption": "AES128",
                "ipsec_integrity": "SHA256",
                "pfs_group": "PFS2048",
                "sa_datasize": 0,
                "sa_lifetime": 3600
              }
            ],
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/localNetworkGateways/VPC-vpn-cloudil-local-gw",
            "location": "westeurope",
            "name": "VPC-vpn-cloudil-hub",
            "resource_group_name": "RG-il-vpn",
            "routing_weight": 0,
            "shared_key": "AAAAAQAAABRjNDJzZjczdWRwYWdpcWwxZTE1dgAAABDmlP9RUcLsjX6noBB8bc2/AAAADDllAoKaxqSRgx8FzuLTumqyfmoypPiHDhoXELzz3IeONm5Zy5IC034rE0pK",
            "tags": {
              "environment": "test",
              "service": "vpn"
            },
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/0735fd1a-513b-4973-a654-4f850df181d0/resourceGroups/RG-il-vpn/providers/Microsoft.Network/virtualNetworkGateways/VPC-vpn-vpn-gw"
          },
          "dependencies": [
            "azurerm_local_network_gateway.localgw",
            "azurerm_public_ip.azure-vpn-ip",
            "azurerm_subnet.azure-gateway-subnet",
            "azurerm_virtual_network_gateway.azure-vpn-gw",
            "yandex_kms_secret_ciphertext.psk-encrypted"
          ]
        }
      ]
    }
  ]
}